# SuperPeintureEngine

./: CMakeLists.txt  Doxyfile  README.md  light.xml  mixer.cpp  mixer.h  mixer.ui  pigment.xml
createxml/: A.xml  D65.xml  D65_2.xml  Kac.cpp  Kbs.cpp  Kcb.cpp  Kcr.cpp  Kcy.cpp  Kpb.cpp  Ksg.cpp  Ktw.cpp  Kub.cpp  Kvi.cpp  Kyo.cpp  Sac.cpp  Sbs.cpp  Scb.cpp  Scr.cpp  Scy.cpp  Spb.cpp  Ssg.cpp  Stw.cpp  Sub.cpp  Svi.cpp  Syo.cpp  ciestandardA.cpp  ciestandardD65.cpp  cr.xml  createAllXML.sh  createxml  createxml.cpp  kTransform.sh  kvals.cpp  sTransform.sh  sg.xml  standardCIE_D65.txt  svals.cpp  test.xml  ub.xml  vi.xml
include/: configxml.h  light.h  pigment.h  pipeline.h  pipeline_cpu.h  pipeline_gpu.h  renderingwidget.h  shader.h  spectre.h  utils_kubelka.h
lumieres/: D65.xml
pigments/: bs.xml  cb.xml  crvi93.xml  cy.xml  pb.xml  tw.xml  yo.xml
src/: configxml.cpp  light.cpp  main.cpp  mixer.cpp  mixer.h  mixer.ui  mixeur.cpp  mixeur.h  mixeur.ui  pigment.cpp  pipeline_cpu.cpp  pipeline_gpu.cpp  renderingwidget.cpp  shader.cpp  spectre.cpp  utils_kubelka.cpp
